--- a/style.css
+++ b/style.css
@@ -7,14 +7,50 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #BBBDF6;
+    color: #07020D;
 }
 
-h1{
+h1,h2{
     text-align: center;
 }
 
+.buttons{
+    gap: 16px;
+    justify-content: center;
+    padding: 16px;
+}
+
 .btn{
+    display: block;
     background-color: #9893DA;
     padding: 10px 20px;
     font-size: 16px;
+    border-style: none;
+    border: 2px solid #797A9E;
+}
+
+.flex{
+    display: flex;
+}
+
+.playerside{
+    width: 50vw;
+    padding: 20px;
+}
+
+.score{
+    background-color: #9893DA;
+    height: 42px;
+    border: 2px solid #797A9E;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.indentor{
+    background-color: #9893DA;
+    height: 42px;
+    border: 2px solid #797A9E;
+    margin: 16px;
 }
