--- a/style.css
+++ b/style.css
@@ -55,3 +55,16 @@ h1,h2{
     border: 2px solid #797A9E;
     margin: 16px;
 }
+
+.img{
+    display: none;
+    width: 15vw;
+    height: auto;
+    margin: 20px auto;
+    border: 2px solid #797A9E;
+    padding: 10px;
+}
+
+.active{
+    display: block;
+}
